--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux-logger": "^3.0.6",
+    "reselect": "^4.1.1",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
